apps/monitoring-shelly-exporter/k8s.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shelly-exporter
  namespace: monitoring
  labels:
    app.kubernetes.io/name: shelly-exporter
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: shelly-exporter
